4th goal is completed

--- a/RDIP/Codes/vlab_exp.html
+++ b/RDIP/Codes/vlab_exp.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
     <title>Experiment</title>
-    <link href="vlab_style1.css" rel="stylesheet">
-    <script src="vlab_ui.js" defer></script>
+    <link href="VLAB_style1.css" rel="stylesheet">
+    <script src="VLAB_ui.js" defer></script>
     
 
 </head>
