--- a/RDIP/Codes/unit3proj.html
+++ b/RDIP/Codes/unit3proj.html
@@ -29,23 +29,25 @@
         <table>
             <tbody>
                 <tr>
-                    <td><h id="0"></h></td>
-                    <td><h id="1"></h></td>
-                    <td><h id="2"></h></td>
-                    <td><h id="3"></h></td>
-                    <td><h id="4"></h></td>
-                    <td><h id="5"></h></td>
-                    <td><h id="6"></h></td>
-                    <td><h id="7"></h></td>
-                    <td><h id="8"></h></td>
-                    <td><h id="9"></h></td>
+                    <td><h id="0" onclick="correctsent(0)"></h></td>
+                    <td><h id="1" onclick="correctsent(1)"></h></td>
+                    <td><h id="2" onclick="correctsent(2)"></h></td>
+                    <td><h id="3" onclick="correctsent(3)"></h></td>
+                    <td><h id="4" onclick="correctsent(4)"></h></td>
+                    <td><h id="5" onclick="correctsent(5)"></h></td>
+                    <td><h id="6" onclick="correctsent(6)"></h></td>
+                    <td><h id="7" onclick="correctsent(7)"></h></td>
+                    <td><h id="8" onclick="correctsent(8)"></h></td>
+                    <td><h id="9" onclick="correctsent(9)"></h></td>
                 </tr>
             </tbody>
         </table>
     </center><br><br><br>
-    <center><b><p1 id="sentence"></p1></b><p2 id="sentence2"></p2></center><br><br><br>-->
-    
+    <center><b><p1 id="sentence"></p1></b><p2 id="sentence2"></p2></center><br><br><br>
+    <center><b><p3 id="sen1"></p3></b></center><br /><br />
+    <center><p id="senref"></p></center><br>
     <p id="rando"></p>
+    <p id="sen2"></p>
     
 </body>
 </html>
