--- a/RDIP/Codes/unit3proj.html
+++ b/RDIP/Codes/unit3proj.html
@@ -45,7 +45,7 @@
     </center><br><br><br>
     <center><b><p1 id="sentence"></p1></b><p2 id="sentence2"></p2></center><br><br><br>
     <center><b><p3 id="sen1"></p3></b></center><br /><br />
-    <center><p id="senref"></p></center><br>
+    <center><p id="senref" onclick="run()"></p></center><br>
     <p id="rando"></p>
     <p id="sen2"></p>
     
