--- a/RDIP/Codes/unit3proj.html
+++ b/RDIP/Codes/unit3proj.html
@@ -46,6 +46,7 @@
     <center><b><p1 id="sentence"></p1></b><p2 id="sentence2"></p2></center><br><br><br>
     <center><b><p3 id="sen1"></p3></b></center><br /><br />
     <center><p id="senref" onclick="run()"></p></center><br>
+    <center><p4 id="sencheck"></p4></center>
     <p id="rando"></p>
     <p id="sen2"></p>
     
