--- a/RDIP/Codes/unit3proj.html
+++ b/RDIP/Codes/unit3proj.html
@@ -47,7 +47,9 @@
     <p id="corpus_2"></p>
     <p id="sen2"></p>
     <p id="rando"></p>
-    <p id="wrong"></p>
+    <p id="wrong" onclick="answer()"></p>
+    <p id="no_disp" onclick="no_ans()"></p>
+    <p id="solution"></p>
 
 </body>
 </html>
